  * Stylish manual pages convention review. (Closes: #628447)

  [ Adam D. Barratt ]
  * debian/copyright: Update repository information somewhat belatedly
    for the move to git.

  [ James Vega ]
  * debchange: Remove dapper from the list of recognized distributions.
  * debcheckout: Handle Alioth's new anonymous access URLs when converting to
    authenticated URLs. (Closes: #628674)

 -- Benjamin Drung <bdrung@debian.org>  Sun, 29 May 2011 18:41:13 +0200

devscripts (2.11.0) unstable; urgency=low

  [ James Vega ]
  * getbuildlog:
    + Query the updated build log status pages.
    + Request the raw log file when downloading.
  * debcheckout: Use the destination directory, not package name, when
    checking for where the checkout happened.  (Closes: #627030)
  * Merge from Ubuntu:
    + dscverify: Use Ubuntu keyrings if on an Ubuntu-based system.
    + rmadison: Use Ubuntu's rmadison instance on Ubuntu.
  * namecheck: Update Alioth's "unknown project" pattern.  Thanks to Nelson A.
    de Oliveira for the patch.  (Closes: #627824)
  * Add lintian overrides for the ldconfig calls dh adds to post{inst,rm}.

  [ Benjamin Drung ]
  * Move add-patch, edit-patch, suspicious-source, what-patch, and wrap-and-sort
    from ubuntu-dev-tools into devscripts (Closes: #568481).
  * Remove EOL whitespaces (Closes: #502525).
  * dget.1: Mention `debcheckout` under `SEE ALSO`. Thanks to Paul Menzel for
    the patch. (Closes: #596245)
  * debchange, uupdate: Use dpkg-vendor instead of lsb_release.
  * Merge from Ubuntu:
    + debuild: Enforce Ubuntu merge policy.
    + debsign: Implement DEBSIGN_ALWAYS_RESIGN variable to skip the
      "Would you like to use the current signature?" question. (Closes: #447955)
  * Add test infrastructure.

  [ David Prévot ]
  * Partial manual pages convention review (Closes: #626015).

 -- James Vega <jamessan@debian.org>  Tue, 24 May 2011 23:55:36 -0400

devscripts (2.10.73) unstable; urgency=low

  [ James Vega ]
  * uscan: