@@ -51,6 +51,8 @@ Download binary packages instead of source packages.
 .TP
 .BR \-a ", " \-\-architecture
 Specify architecture of downloaded binary packages. Implies \fB\-\-binary\fP.
+This can be given multiple times in order to download binary packages for
+multiple architectures.
 
 .TP
 .BR \-h ", " \-\-help
